changed text when reporting on analysis progress

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -334,7 +334,7 @@ function monitor_log(log)
      match.reverse();
      val = match[0];
      if (!val) val = "";
-     image = "Generating visualization "+val+". . .";
+     image = "Rendering "+val+". . .";
    }
    if (log.match(/database/)) {
      image = image+"done!<br/>";
