--- a/web/css/styled.css
+++ b/web/css/styled.css
@@ -850,6 +850,16 @@ tr.highlight {
   color: #0000EE;
 }
 
+#.link:hover {
+#  color: #009900;
+#  cursor: pointer;
+#}
+
+.link {
+  color: #0000EE;
+}
+
+
 .hsp_image {
   background-color: #FFF;
   width: 400px; 
