--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -12,15 +12,16 @@ function dataset_chain(val) {
  $('#ds_list').html('<input type=hidden id = "ds_id"><font class="loading. . ."></font>');
  $('#ds_info').html('<input type=hidden id = "chr">');
  $('#chr_info').html('<input type=hidden id = "ds_id">');
- get_dataset(['org_id'],[dataset_info_chain]);
+ get_dataset(['args__oid','org_id'],[dataset_info_chain]);
 }
 
-function dataset_info_chain(val) {
+function dataset_info_chain(val, val2) {
  $('#chr_info').html('<font class="loading"></font>');
  $('#ds_info').html('<input type=hidden id = "chr"><font class="loading">loading. . .</font>');
  $('#viewer').html('<font class="loading"></font>');
  $('#get_seq').empty();
  if (val) {$('#ds_list').html(val);}
+ if (val2) {$('#org_list').html(val2);}
  get_dataset_info(['ds_id'],[dataset_info_chr_chain]);
 }
 
@@ -43,6 +44,16 @@ function get_organism_name_chain(val)
  get_orgs(['args__'+val], [dataset_chain]);	 
 }
 
+function get_dataset_name_chain(val)
+{
+// $('#org_list').html('<input type=hidden id = "org_id"><font class="loading"></font>');
+ $('#ds_list').html('<input type=hidden id = "ds_id">');
+ $('#chr_info').empty();
+ $('#ds_info').html('<input type=hidden id = "chr">');
+ $('#viewer').empty();
+ get_dataset(['args__dsname','args__'+val], [dataset_info_chain]);	 
+}
+
 function launch_viewer (dsd, chr) {
  x = $('#x').val();
  z = $('#z').val();
@@ -50,11 +61,20 @@ function launch_viewer (dsd, chr) {
  link =  "GenomeView.pl?z="+z+"&x="+x+"&ds="+dsd+"&chr="+chr;
  window.location=link;
 }
-function timing(){
+function timing(val){
+  var searchterm;
+  if (val) {searchterm = $('#org_name').val();}
+  else {searchterm = $('#ds_name').val();}
+  if (pageObj.search && pageObj.search == searchterm)
+   {
+    return;
+   }
+  pageObj.search=searchterm;
   if (pageObj.time){
    clearTimeout(pageObj.time);
   }
-   pageObj.time = setTimeout("get_organism_name_chain($('#org_name').val())",500);
+  if (val) {pageObj.time = setTimeout("get_organism_name_chain($('#org_name').val())",500);}
+  else {pageObj.time = setTimeout("get_dataset_name_chain($('#ds_name').val())",500);}
 }
 
 $(document).ready(function(){
@@ -66,16 +86,17 @@ $(document).ready(function(){
  <TR>
   <TD valign=top>
    <DIV class = "oblique">Organisms</DIV>
-   <DIV id="blah">Organism Name: <input type="text" size=10 value="<TMPL_VAR NAME="ORG_NAME">" name = "org_name" id="org_name" onKeyUp='timing();'></DIV>
+   <DIV id="blah">Organism Name: <input type="text" size=10 value="<TMPL_VAR NAME="ORG_NAME">" name = "org_name" id="org_name" onchange='timing(1);' onKeyUp='timing(1);'></DIV>
    <DIV id="org_list"><TMPL_VAR NAME="ORG_LIST"></DIV>
    <DIV id="viewer"></DIV>
    <DIV id="get_seq"></DIV>
   <TD valign=top>
-   <DIV class = "oblique">Datasets</DIV><br>
+   <DIV class = "oblique">Datasets</DIV>
+   <DIV id="blah">Dataset Name: <input type="text" size=10 value="<TMPL_VAR NAME="ORG_NAME">" name = "ds_name" id="ds_name" onchange='timing();' onKeyUp='timing();'></DIV>
    <DIV id="ds_list"><TMPL_VAR NAME="DI_LIST"></DIV>
 
   <TD valign=top>
-   <DIV class = "oblique">Dataset information</DIV><br><br>
+   <DIV class = "oblique">Dataset information</DIV>
    <DIV id="ds_info"><TMPL_VAR NAME="DS_INFO"></DIV>
    <DIV id="chr_info"><TMPL_VAR NAME="CHR_INFO"></DIV>
 
